--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,3 @@
-body{
-    height: 100vmax;
-    background-color: rgb(74, 23, 122);
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: center;
-    
-}
-
-main, footer, .cabecalho{
-    background-color: rgb(38, 11, 63);
-}
-
-img{
-    width: 1rem;
-}
-
-/* ------------------Cabeçalho--------------- */
 .cabecalho a{
     font-weight: bold;
     color: whitesmoke;
@@ -35,17 +16,16 @@ img{
 }
 .cabecalho nav{
     size: 940px;
-    /* text-align: center;
-    margin: 0 auto; */
+    text-align: center;
+    margin: 0 auto;
 }
 .cabecalho, footer, main{
     background-color: rgb(64, 20, 105);
     padding: 2em 0;
-    /* margin-bottom: 1em;
-    margin: 0 auto 1em auto; */
+    margin-bottom: 1em;
+    margin: 0 auto 1em auto;
     text-align: center;
     width: 60%;
-    border-radius: 20px;
 }
 /* ------------------Corpo--------------- */
 
@@ -65,26 +45,26 @@ main{
     font-size: 1.5em;
     color: whitesmoke;
     margin: 0 auto;
-    
+
 }
 .descricao h2{
-    
+
     padding: 0.5em 0;
 }
-/* 
+
 body{
     background-color: rgb(74, 23, 122);
     width: 60%;
     margin: 1em auto;
-} */
+}
 
 /* ------------------Roda pe--------------- */
-footer{
+/* footer{
     background-color: rgb(64, 20, 105);
     padding: 0.5rem 0;
-    /* margin: 1rem 0; */
+    margin: 1rem 0;
     text-align: center;
-}
+} */
 
 .icone{
     width: 2.5em;
@@ -105,9 +85,12 @@ footer{
     .cabecalho, footer, main{
         background-color: rgb(64, 20, 105);
         padding: 2em 0;
-        /* margin-bottom: 1em; */
+        margin-bottom: 1em;
         text-align: center;
         width: 90%;
     }
 
+    body{
+        width: 100%;
+    }
 }
